# rgb-remote-control

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: constants.h  get.c  get.h  handler.c  handler.h  http.c  http.h  main.c  models.c  models.h  post.c  post.h  remote.c  remote.h  utils.c  utils.h
